# MagMerge

./: .gitignore  Cargo.toml  README.md  agents.md  build.rs  justfile  spec.md
.github/workflows/: ci.yml
samples/: Bead Positions 2025-06-04 13-15-12.875.txt  Bead Positions 2025-06-04 13-15-18.496.txt  Bead Positions 2025-06-04 13-15-24.117.txt  Motor Positions 2025-06-04 13-03-09.934.txt  Motor Positions 2025-06-04 13-03-19.113.txt  Motor Positions 2025-06-04 13-03-28.245.txt  README.md
src/: cli.rs  lib.rs
tests/: cli.rs
