[package]
name = "magmerge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "magmerge_cli"
path = "src/bin/magmerge_cli.rs"

[[bin]]
name = "MagMerge"
path = "src/bin/magmerge_gui.rs"

[dependencies]
eframe = "0.27"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-resource = "2"
ico = "0.3"
image = "0.24"
